--- a/css/styles.css
+++ b/css/styles.css
@@ -855,11 +855,11 @@ iframe {
 }
 
 .gallery__item_5 {
-    background-image: url(../images/photos/essentials.jpg);
+    background-image: url(../images/photos/touring_bird.png);
 }
 
 .gallery__item_6 {
-    background-image: url(../images/photos/helm.jpg);
+    background-image: url(../images/photos/jelvix.jpg);
 }
 
 .gallery__button {
